# ai-self-media-tools

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.en.md  README.md  README_EN.md  RELEASE_NOTES_0.1.md  RELEASE_NOTES_0.2.md  config.example.json  config.yaml.example  install.ps1  install.sh  pyproject.toml  requirements.txt
content_platform/: __init__.py  admin_analysis.py  admin_data.py  admin_server.py  admin_store.py  aitoearn.py  cli.py  compliance.py  content_hygiene.py  content_policy.py  copy_manager.py  formatters.py  formatters.py.bak.v3  fusion.py  generator.py  gif_utils.py  gzh_design.py  humanize.py  humanizer.py  illustrator.py  intelligence.py  logogen.py  magazine.py  mcp_server.py  media.py  metrics.py  metrics_server.py  models.py  newsletter.py  niche_analysis.py  notify.py  paths.py  pipeline.py  platform_catalog.py  platform_checks.py  profiles.py  project_audit.py  publishers.py  publishers.py.bak.v3  readiness.py  (+15 more)
docs/: 7PROJECT_INTEGRATION.md  ACKNOWLEDGEMENTS.md  AGENT_CONTEXT_SNIPPET.md  CHANNEL_MATRIX.md  CONTENT_GEN_ENHANCEMENT.md  CONTINUOUS_DEVELOPMENT.md  HERMES_REDDIT_CHANNEL_INTEGRATION.md  INSTALL.en.md  INSTALL.md  PROJECT_ALIAS_POLICY.md  PROJECT_GUIDE.en.md  PROJECT_GUIDE.zh.md  index.md
scripts/: __init__.py  autoclip_adapter.py  content_quality_gate.py  data_collector.py  github_star_explorer.py  install.py  open_notebook_integrator.py  release_bundle.py  voice_engine.py
systemd/: hermes-content-platform-maintenance.service  hermes-content-platform-maintenance.timer  hermes-content-platform-metrics.service  (+6 more)
(+35 files in other folders)
