[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-self-media-tools"
version = "3.3.0"
description = "Agent-neutral AI self-media workflow toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
content-platform = "content_platform.cli:main"

[tool.setuptools.packages.find]
include = ["content_platform*"]
